--- a/app/src/main/res/layout/activity_drawer_docs.xml
+++ b/app/src/main/res/layout/activity_drawer_docs.xml
@@ -8,6 +8,16 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+    <android.support.v7.widget.RecyclerView
+
+        android:id="@+id/recycler_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="130dp"
+        android:paddingTop="130dp" />
+
     <include
         layout="@layout/app_bar_drawer"
         android:layout_width="match_parent"
