browser y cuestionario funcionanfo

--- a/app/src/main/res/menu/activity_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer_drawer.xml
@@ -23,13 +23,13 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_browser"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="Sesions" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_survey"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Survey" />
         </menu>
     </item>
 
